--- a/team.html
+++ b/team.html
@@ -1,13 +1,16 @@
 <html>
 <head>
-  <title>Sprout training Team</title>
+	<title>Sprout training Team</title>
 </head>
 
 <body>
-  <h1>Sprout training Team</h1>
+	<h1>Sprout training Team</h1>
 
-  <h2>Members</h2>
-  <ul>
-  </ul>
+	<h2>Members</h2>
+	<ul>
+		<li>
+			Abhay Thapa
+		</li>	
+	</ul>
 </body>
 </html>
