--- a/team.html
+++ b/team.html
@@ -1,17 +1,18 @@
 <html>
 <head>
-	<title>Sprout training Team</title>
+  <title>Sprout training Team</title>
 </head>
 
 <body>
-	<h1>Sprout training Team</h1>
-	<h2>Members</h2>
-	<ul>
-		<li>Abhay Thapa</li>
-		<li>Kapil</li>
-		<li>Kshitiz Gurung</li>
-		<li>Dipesh Gautam</li>	
-	</ul>
+  <h1>Sprout training Team</h1>
+  <h2>Members</h2>
+  <ul>
+    <li>Abhay Thapa</li>
+    <li>Kapil</li>
+    <li>Kshitiz Gurung</li>
+    <li>Dipesh Gautam</li>
+    <li>Bikash Poudel</li>
+  </ul>
 </body>
 </html>
 
