--- a/team.html
+++ b/team.html
@@ -8,6 +8,7 @@
 	<h2>Members</h2>
 	<ul>
 		<li>Abhay Thapa</li>
+		<li>Manish Das</li>
 		<li>Kapil</li>
 		<li>Kshitiz Gurung</li>
 		<li>Dipesh Gautam</li>	
