--- a/team.html
+++ b/team.html
@@ -12,6 +12,7 @@
     <li>Kshitiz Gurung</li>
     <li>Dipesh Gautam</li>
     <li>Bikash Poudel</li>
+	<li>Sandeep Koirala</li>
   </ul>
 </body>
 </html>
