--- a/team.html
+++ b/team.html
@@ -11,6 +11,7 @@
     <li>Kapil</li>
     <li>Kshitiz Gurung</li>
     <li>Dipesh Gautam</li>
+	<li>Dipil Saud</li>
     <li>Bikash Poudel</li>
 	<li>Sandeep Koirala</li>
 	<li>Pratuat Amatya<li>
