new commint pratuat

--- a/team.html
+++ b/team.html
@@ -13,6 +13,7 @@
     <li>Dipesh Gautam</li>
     <li>Bikash Poudel</li>
 	<li>Sandeep Koirala</li>
+	<li>Pratuat Amatya<li>
   </ul>
 </body>
 </html>
