--- a/team.html
+++ b/team.html
@@ -16,7 +16,7 @@
 	<li>Sandeep Koirala</li>
 	<li>Pratuat Amatya<li>
 	<li>chandra</li>
-	<li>Prashiddha Joshi</li>
+	<li>Prashiddha Raj Joshi</li>
   </ul>
 </body>
 </html>
