added by bikash

--- a/team.html
+++ b/team.html
@@ -19,9 +19,9 @@
 	<li>Sandeep Koirala</li>
 	<li>Pratuat Amatya<li>
 	<li>chandra</li>
-	<li>Prashiddha 
-		Joshi</li>
+	<li>Prashiddha Joshi</li>
 	<li>Prasvin Pandey</li>
+	<li>Bikash Basukala</li>
   </ul>
 </body>
 </html>
