added by bikash

--- a/team.html
+++ b/team.html
@@ -18,7 +18,8 @@
 	<li>Sandeep Koirala</li>
 	<li>Pratuat Amatya<li>
 	<li>chandra</li>
-	<li>PrashiddhaRaj Joshi</li>
+	<li>Prashiddha Raj Joshi</li>
+	<li>Bikash Basukala</li>
   </ul>
 </body>
 </html>
