--- a/team.html
+++ b/team.html
@@ -8,12 +8,12 @@
   <h1>Sprout training Team</h1>
   <h2>Members</h2>
   <ul>
-			<li>Manish Das</li>
+			<li>Manish Kal Das</li>
     <li>Abhay Thapa</li>
     <li>Kapil</li>
     <li>KshitizGurung</li>
     <li>Dipesh Gautam</li>
-	<li>Dipil Bamti</li>
+	<li>Dipil</li>
     <li>Bikash Poudel</li>
 	<li>Sandeep Koirala</li>
 	<li>Pratuat Amatya<li>
