name added again

--- a/team.html
+++ b/team.html
@@ -23,7 +23,9 @@
 	<li>Prashiddha Joshi</li>
 	<li>Prasvin Pandey</li>
 	<li>Bikash Basukala</li>
-
+	<li>PrashiddhaRaj Joshi</li>
+	<li>Prasvin Pandey-chabahil</li>
+	<li>prasvin</li>
   </ul>
 </body>
 </html>
