--- a/team.html
+++ b/team.html
@@ -21,7 +21,7 @@
 	<li>chandra</li>
 	<li>Prashiddha 
 		Joshi</li>
-	<li>Prasvin Pandey</li>
+	<li>Prasvin Venkatesh</li>
   </ul>
 </body>
 </html>
