--- a/team.html
+++ b/team.html
@@ -25,7 +25,7 @@
 	<li>Bikash Basukala</li>
 	<li>PrashiddhaRaj Joshi</li>
 	<li>Prasvin Pandey-chabahil</li>
-	<li>prasvin</li>
+	<li>prasvin-chabahil</li>
   </ul>
 </body>
 </html>
