--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@
 			<li>Manish Das</li> <li>Kupondole</li>
     <li>Abhay Thapa</li><li>Ekantakuna</li>
     <li>Kapil</li>
-    <li>KshitizGurung</li>
+    <li>KshitizGurung Address:Budhanilkantha</li>
     <li>Dipesh Gautam</li>
 	<li>Dipil </li>
     <li>Bikash Poudel</li>
