--- a/team.html
+++ b/team.html
@@ -9,8 +9,8 @@
   <h1>Sprout training Team</h1>
   <h2>Members</h2>
   <ul>
-			<li>Manish Das</li> <li>Kupondole</li>
-    <li>Abhay Thapa</li><li>Ekantakuna</li>
+			<li>Manish Das - Kupondole</li>
+    <li>Abhay Thapa - Ekantakuna</li>
     <li>Kapil</li>
     <li>KshitizGurung</li>
     <li>Dipesh Gautam</li>
