--- a/team.html
+++ b/team.html
@@ -13,6 +13,7 @@
     <li>Abhay Thapa - Ekantakuna</li>
     <li>Kapil</li>
     <li>KshitizGurung Address:Budhanilkantha</li>
+    <li>Prasvin Venkatesh</li>
     <li>Dipesh Gautam</li>
 	<li>Dipil </li>
     <li>Bikash Poudel</li>
@@ -20,7 +21,7 @@
 	<li>Pratuat Amatya<li>
 	<li>chandra</li>
 	<li>Prashiddha Joshi</li>
-	<li>Prasvin Venkatesh</li>
+	<li>Prasvin Pandey</li>
 	<li>Bikash Basukala</li>
 
   </ul>
