--- a/team.html
+++ b/team.html
@@ -1,30 +1,26 @@
 <html>
 <head>
-	<title>Sprout training Team</title>
+<title>Sprout training Team</title>
 </head>
-
 <body>
-
-
-  <h1>Sprout training Team</h1>
-  <h2>Members</h2>
-  <ul>
-			<li>Manish Das - Kupondole</li>
-    <li>Abhay Thapa - Ekantakuna</li>
-    <li>Kapil</li>
-    <li>KshitizGurung Address:Budhanilkantha</li>
-    <li>Prasvin Venkatesh</li>
-    <li>Dipesh Gautam</li>
-	<li>Dipil </li>
-    <li>Bikash Poudel</li>
-	<li>Sandeep Koirala</li>
-	<li>Pratuat Amatya<li>
-	<li>chandra</li>
-	<li>Prashiddha Joshi</li>
-	<li>Prasvin Pandey</li>
-	<li>Bikash Basukala</li>
-
-  </ul>
+ <h1>Sprout training Team</h1>
+ <h2>Members</h2>
+ <ul>
+	    <li>Manish Das - Kupondole</li>
+      <li>Abhay Thapa - Ekantakuna</li>
+      <li>Kapil</li>
+      <li>KshitizGurung Address:Budhanilkantha</li>
+      <li>Prasvin Venkatesh</li>
+      <li>Dipesh Gautam</li>
+      <li>Dipil</li>
+      <li>Bikash Poudel</li>
+      <li>Sandeep Koirala</li>
+		  <li>Pratwee Amatya<li>
+			<li>chandra</li>
+			<li>Prashiddha Joshi</li>
+			<li>Prasvin Pandey</li>
+			<li>Bikash Basukala</li>
+ </ul>
 </body>
 </html>
 
