--- a/team.html
+++ b/team.html
@@ -9,13 +9,13 @@
   <h1>Sprout training Team</h1>
   <h2>Members</h2>
   <ul>
-			<li>Manish Das - Kupondole</li>
+			<li>Manish Das - Gupondole</li>
     <li>Abhay Thapa - Ekantakuna</li>
     <li>Kapil</li>
     <li>KshitizGurung Address:Budhanilkantha</li>
     <li>Prasvin Venkatesh</li>
-    <li>Dipesh Gautam</li>
-	<li>Dipil </li>
+    <li>Dipesh Gautam-Balkhu</li>
+	<li>Dipil-Nakkhu </li>
     <li>Bikash Poudel</li>
 	<li>Sandeep Koirala</li>
 	<li>Pratuat Amatya<li>
