--- a/team.html
+++ b/team.html
@@ -15,7 +15,7 @@
     <li>KshitizGurung Address:Budhanilkantha</li>
     <li>Prasvin Venkatesh</li>
     <li>Dipesh Gautam</li>
-	<li>Dipil </li>
+	<li>Dipil Bamti</li>
     <li>Bikash Poudel</li>
 	<li>Sandeep Koirala</li>
 	<li>Pratuat Amatya<li>
