--- a/digg.html
+++ b/digg.html
@@ -1,9 +1,31 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>Sprout - Digg</title>
-</head>
-
+  <link rel="stylesheet" href="css/style.css">
+</head>	
 <body>
-
+	<section id="container">
+		<div id="business">
+			
+		</div>
+		
+		<div id="entertainment">
+			
+		</div>
+		
+		<div id="gaming">
+			
+		</div>
+		
+		<div id="lifestyle">
+			
+		</div>
+		
+		<div id="offbeat">
+			
+		</div>
+	</section>
+	<footer>Copyright Here</footer>
 </body>
 </html>
