Basic Framework of the Entertainment Section Made Successfully

--- a/digg.html
+++ b/digg.html
@@ -11,7 +11,12 @@
 		</div>
 		
 		<div id="entertainment">
-			
+			<header id="entertainment-header">
+				Entertainment News Directly via Digg
+			</header>
+			<section id="entertainment-stories-list">
+				Here is the Content  <!-- TODO Here Stories List Need to be Displayed -->
+			</section>
 		</div>
 		
 		<div id="gaming">
