--- a/digg.html
+++ b/digg.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sprout - Digg</title>
-  <link rel="stylesheet" href="css/style.css">
+	<title>Sprout - Digg</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>	
 <body>
 	<section id="container">
 		<div id="business">
-			
+			<header>BUSINESS</header>
+			<figure><img src="img/business.jpg"></figure>
+			<ul>
+				<li>
+					<a href="http://www.businessweek.com/investor/content/mar2011/pi20110314_887013.htm">The Money Manager in Your Pocket</a>
+					<p>Banks and brokerages are scrambling to upgrade mobile offerings, betting technology will transform the way we spend, save, and invest</p>
+				</li>
+				<li>
+					<a href="http://www.businessweek.com/magazine/content/11_12/b4220044533328.htm">A Lennar Veteran Dares to Build Again</a>
+					<p>FivePoint Communities' Emile Haddad feels rumblings of a real estate revival</p>
+				</li>
+				<li>
+					<a href="http://www.businessweek.com/news/2011-03-16/fed-signals-more-stimulus-unlikely-as-recovery-gains-strength.html">Fed Signals Further Stimulus is Unlikely</a>
+				</li>
+			</ul>
 		</div>
-		
+
 		<div id="entertainment">
-			
+
 		</div>
-		
+
 		<div id="gaming">
-			
+
 		</div>
-		
+
 		<div id="lifestyle">
-			
+
 		</div>
-		
+
 		<div id="offbeat">
-			
+
 		</div>
 	</section>
 	<footer>Copyright Here</footer>
