--- a/digg.html
+++ b/digg.html
@@ -58,10 +58,6 @@
 			</section>
 		</div>
 
-		<div id="gaming">
-
-		</div>
-
 		<div id="lifestyle">
 	        <header id = "lifestyle-header">
 			    <span id = "lifestyle-title">Lifestyle News!</span><span id = "most-recent">Most recent</span><span id = "all-news">All News!</span>
@@ -111,6 +107,50 @@
 					<li>Real Life Ghost Hunters?<a class="offbeat-refresh-link" href="#">Read it Here!</a></li>
 				</ul>
 			</div>
+
+		</div>
+
+		<div id="entertainment">
+
+		</div>
+
+		<div id="gaming">
+			<div id = 'gaming-block-title'>Top Games</div>
+			<ul>
+				<li>
+					<div class = 'game-icon'>
+						<img src='http://image.gamespotcdn.net/gamespot/images/2010/353/reviews/606282_20101220_thumb001.jpg'></img>
+					</div>
+					<div class = 'game-description'>
+						<span class = 'game-title'>Bad Company 2 Vietnam</span>					
+						<span class = 'game-review'>
+							Excellent maps, a focus on close-range combat, and great period atmosphere keep this downloadable add-on from feeling like more of the same.
+						</span>
+					</div>					
+				</li>
+				<li>
+					<div class = 'game-icon'>
+						<img src='http://image.gamespotcdn.net/gamespot/images/2011/020/reviews/609599_20110121_thumb001.jpg'></img>
+					</div>
+					<div class = 'game-description'>
+						<span class = 'game-title'>Zeit Squared</span>					
+						<span class = 'game-review'>
+							Zeit Squared's clever mechanics combine to create a unique and satisfying shoot-'em-up.
+						</span>
+					</div>
+				</li>
+				<li>
+					<div class = 'game-icon'>
+						<img src='http://image.gamespotcdn.net/gamespot/images/2010/313/604983_20101110_thumb001.jpg'></img>
+					</div>
+					<div class = 'game-description'>
+							<span class = 'game-title'>Football Manager 2011</span>
+							<span class = 'game-review'>
+								A revised training system and new features make this the most well-rounded and complete version of Football Manager to date.
+							</span>
+					</div>					
+				</li>
+			</ul>
 		</div>
 	</section>
 	<footer>Copyright Here</footer>
