Gaming initial commit - html complete css partially complete

--- a/digg.html
+++ b/digg.html
@@ -57,6 +57,9 @@
 				</ul>
 			</section>
 		</div>
+
+	</div>
+
 		<div id="gaming">
 			<div id = 'gaming-block-title'>Top Games</div>
 			<ul>
@@ -94,7 +97,6 @@
 					</div>					
 				</li>
 			</ul>
-
 		</div>
 
 		<div id="lifestyle">
