--- a/digg.html
+++ b/digg.html
@@ -71,7 +71,7 @@
 				<div id="offbeat-title">OffBeats</div>
 				<ul class="offbeat-diggs">
 					<li>Check out the World's Coolest Piano!<a class="offbeat-refresh-link" href="#">Read it Here!</a></li>
-					<li>12 Most Unusual Places People Call HOME<a class="offbeat-refresh-link" href="#">Read it Here!</a></li>
+					<li>12 Most Unusual Places People Call HOME!<a class="offbeat-refresh-link" href="#">Read it Here!</a></li>
 					<li>Albert Einstein: Seven Things You Didn't Know!<a class="offbeat-refresh-link" href="#">Read it Here!</a></li>
 					<li>Insane Girl Overjoyed About Japan Earthquake Claiming it's a Good Sign from God<a class="offbeat-refresh-link" href="#">Read it Here!</a></li>
 					<li>Real Life Ghost Hunters?<a class="offbeat-refresh-link" href="#">Read it Here!</a></li>
