--- a/digg.html
+++ b/digg.html
@@ -63,7 +63,41 @@
 		</div>
 
 		<div id="lifestyle">
-
+	        <header id = "lifestyle-header">
+			    <span id = "lifestyle-title">Lifestyle News!</span><span id = "most-recent">Most recent</span><span id = "all-news">All News!</span>
+			</header>
+			<section id = "lifestyle-content">
+			    <div class = "lifestyle-articles">
+			    <span class = "lifestyle-picture">
+			        <img src = "lifestyle_img/t.jpeg" height = "50" width = "50" >
+			    </span>
+			    <span class = "lifestyle-topic">
+			        Created Equal: Juxtapozed Portraits from 48 State
+                </span>
+                <a href = "www.visualnews.com" class = "source-link">
+                    visualnews.com 
+                </a>
+                <article class = "lifestyle-article">
+                   <p class = "article-copy"> Mark Laita says that the gap between the rich and poor, the conservatives and liberals and even the good and the evil of America is growing... </p>
+                   <p class = "lifestyle-post-time">17 hr 27 min ago</p>
+                </article>
+                </div>
+                <div class = "lifestyle-articles">
+			    <span class = "lifestyle-picture">
+			        <img src = "lifestyle_img/t.png" height = "50" width = "50" >
+			    </span>
+			    <span class = "lifestyle-topic">
+			        Architectural Wonder of the Oresund Bridge
+                </span>
+                <a href = "www.vivaboo.com" class = "source-link">
+                    vivaboo.com 
+                </a>
+                <article class = "lifestyle-article">
+                   <p class = "article-copy"> The Oresund Bridge (Oresundsbron) is the route to take for anyone travelling between Malmo, Sweden and Copenhagen and the rest has been reported as....  </p>
+                   <p class = "lifestyle-post-time">15 hr 55 min ago</p>
+                </article>
+                </div>
+			</section>
 		</div>
 
 		<div id="offbeat">
